--- a/README.Rmd
+++ b/README.Rmd
@@ -9,9 +9,33 @@ output: md_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+# Text Mining Tool <img src="app/www/img/hex.png" align="right" width="120" />
+
+<br>
+
 ## Instructions
 
-This interface was developed all in R using mainly the shiny and rtweet packages. The tool is online on shinyapps' repository at the adress <https://adsoncostanzi.shinyapps.io/TextMining/>.
+This interface was all developed in R using mainly the shiny and rtweet packages. The tool is online on shinyapps' repository at the adress <https://adsoncostanzi.shinyapps.io/TextMining/>.
 
 PS: To run this app localy it is necessary to have Twitter autorization (access_token, access_secret, api_key, api_secret).
-If you do not have this autorization yet use the comand `rtweet::vignette("auth")`.
+If you do not have this autorization yet use the comand `rtweet::vignette("auth")` and follow the instructions.
+
+Once you have the Twitter API autorization you must create an R file called `twitter_credentias.R` inside the `app/credentials` folder. The file must have 5 objects: api_key, api_secret, access_token, access_secret, and app_name.
+
+### Credential File Example 
+
+The `twitter_credentias.R` file should follow the template below:
+
+```{r, eval = FALSE}
+# set Twitter API parameters
+
+api_key <- "XXX"
+api_secret <- "XXX"
+access_token <- "XXX"
+access_secret <- "XXX"
+app_name <- "xxxxx"
+```
+
+
+
+
