--- a/README.Rmd
+++ b/README.Rmd
@@ -20,11 +20,11 @@ This interface was all developed in R using mainly the shiny and rtweet packages
 PS: To run this app localy it is necessary to have Twitter autorization (access_token, access_secret, api_key, api_secret).
 If you do not have this autorization yet use the comand `rtweet::vignette("auth")` and follow the instructions.
 
-Once you have the Twitter API autorization you must create an R file called `twitter_credentias.R` inside the `app/credentials` folder. The file must have 5 objects: api_key, api_secret, access_token, access_secret, and app_name.
+Once you have the Twitter API autorization you must create an R file called `twitter_credentials.R` inside the `app/credentials` folder. The file must have 5 objects: api_key, api_secret, access_token, access_secret, and app_name.
 
 ### Credential File Example 
 
-The `twitter_credentias.R` file should follow the template below:
+The `twitter_credentials.R` file should follow the template below:
 
 ```{r, eval = FALSE}
 # set Twitter API parameters
